--- a/mybackend/requirements.txt
+++ b/mybackend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==2.3.0
 Django==5.1.7
 djangorestframework==3.15.2
+pillow==11.1.0
 psycopg2-binary==2.9.10
 sqlparse==0.5.3
 typing_extensions==4.12.2
